<resources>
    <string name="app_name">TMS</string>
    <string name="email">Email</string>
    <string name="pass_word">Password</string>
    <string name="btn_login">Login</string>

    <string name="label_yms">YMS</string>
    <string name="label_tms">TMS</string>


    <string name="email_empty">Email empty !</string>
    <string name="password_empty">Password empty !</string>
    <string name="invalid_email">Invalid email address</string>

    <string name="loading">Loading</string>

    <string name="chosse_login">Select to login </string>
    <string name="btn_change_language">Change language </string>
    <string name="chosse_language">Select your langyage</string>

    <!--created by sonhoang-->
    <string name="truck_list">Truck List</string>
    <string name="get_signature">Get Signature</string>
    <string name="scan_vin">Scan VIN</string>
    <string name="update_status">Update Status</string>
    <string name="notes_vihice">Notes Vihicle</string>
    <string name="dmg">Damage Report</string>
    <string name="notes">Notes</string>
    <string name="change_notes">Change Notes</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>


    <string name="truck_load_no">TruckLoad No :</string>
    <string name="truck_name">Truck :</string>
    <string name="driver_name">Driver:</string>
    <string name="created">Created :</string>
    <string name="Voyage">Voyage :</string>

    <string name="from_camera">From camera</string>
    <string name="from_library">From library</string>
    <string name="seleted_photo_upload">Select upload photo</string>
    <string name="select_where_photo">Select where you want to select photo</string>

    <!--created by sonhoang-->
    <string name="save_login">Save Login</string>
    <string name="take_another">Take Another</string>

    <string name="add_notes">And something notes</string>
    <string name="btn_add_note">Add note</string>
    <string name="btn_cancel">Cancel</string>

    <string name="str_total">%1$d /1000</string>

    <!--created by sonhoang-->
    <string name="label_TMS_YMS">TMS</string>
    <string name="qrCode">QR CODE</string>
    <string name="try_again">Please try again</string>
    <string name="login_failed">Login Fail, try again</string>
    <string name="title_addnotes">Add Notes</string>
    <string name="calendar">Calendar</string>
    <string name="load_fail">Load Fail</string>
    <string name="load_trucklist_fail">Load Truck List Fail</string>
    <string name="drop">Drop</string>
    <string name="on_route">OnRoute</string>
    <string name="pick_up">Pick Up</string>
    <string name="back">Back</string>
    <string name="nodata">No Data</string>
    <string name="vehicle_count">Vihicle Count :</string>
    <string name="total_count">Total Count :</string>
    <string name="status">Status :</string>
    <string name="driver">Driver :</string>
    <string name="driver_id">Driver ID :</string>
    <string name="truck_no">TrucNo :</string>
    <string name="tl_no">TLNO :</string>
    <string name="id">ID :</string>
    <string name="damage_type">Damage Type</string>
    <string name="damage_type_code">Damage Type Code</string>
    <string name="severity">Severity</string>
    <string name="btn_save">Save</string>
    <string name="Scheduled">Scheduled</string>
    <string name="Pickup">Pickup</string>
    <string name="OnRoute">OnRoute</string>
    <string name="Discharge">Discharge</string>
    <string name="Completed">Completed</string>
    <string name="addnewdmg">Add New Damage</string>
    <string name="vin">VIN Code :</string>
    <string name="model">Model : </string>
    <string name="make">Make :</string>
    <string name="year">Year :</string>
    <string name="shipper">Shipper :</string>
    <string name="dt">Date :</string>
    <string name="vehicle_id">VehicleID :</string>

</resources>
