<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tms.com.libre.tms.AcAddNewReport">

    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llSave"
        android:layout_below="@+id/rlToolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/llDamageType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/damage_type"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spTypeDamage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDamageCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llDamageType"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/damage_type_code"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spCodeDamage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSeverity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llDamageCode"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/severity"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spServerity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlChangeNotesReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llSeverity"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_notes">

                <RelativeLayout
                    android:id="@+id/rlTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/tvTitleNotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/notes"
                        android:textAllCaps="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/imgChangeNotes"
                        android:paddingLeft="10dp"
                        android:text="@string/change_notes"
                        android:textAllCaps="true" />

                    <ImageView
                        android:id="@+id/imgChangeNotes"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/next"
                        android:tint="@color/md_brown_200" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layoutNotes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/rlTitle"
                    android:background="@drawable/background_scroll_notes">

                    <TextView
                        android:id="@+id/tvNotesAddReport"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:layout_marginTop="5dp"
                        android:maxLines="5"
                        android:paddingLeft="5dp"
                        android:scrollbars="vertical" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlTakePictureAddNewRp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/rlChangeNotesReport">

                <Button
                    android:id="@+id/btnTakePicture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Take Picture" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rcTakePicture"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@+id/btnTakePicture" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/llSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_save" />
    </LinearLayout>

</RelativeLayout>
