<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tms.com.libre.tms.AcPickup">

    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_login" />
    </RelativeLayout>


    <ScrollView
        android:layout_above="@+id/rlUpdateStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlToolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnScanVin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_vinslected"
                    android:text="@string/scan_vin"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvVinCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="VIN CODE"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlChangeNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_notes">

                <RelativeLayout
                    android:id="@+id/rlTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/tvTitleNotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/notes"
                        android:textAllCaps="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/imgChangeNotes"
                        android:paddingLeft="10dp"
                        android:text="@string/change_notes"
                        android:textAllCaps="true" />

                    <ImageView
                        android:id="@+id/imgChangeNotes"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/next"
                        android:tint="@color/md_brown_200" />

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutNotes"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/background_scroll_notes">

                <TextView
                    android:id="@+id/tvNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="5"
                    android:paddingLeft="5dp"
                    android:scrollbars="vertical" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnSignature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_vinslected"
                    android:text="@string/get_signature"
                    android:textAllCaps="false" />

                <ImageView
                    android:paddingTop="10dp"
                    android:id="@+id/imgSignature"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@+id/btnSignature"
                    android:src="@drawable/no_image" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnDamage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_vinslected"
                    android:text="@string/dmg"
                    android:textAllCaps="false" />

                <ImageView
                    android:paddingTop="10dp"
                    android:id="@+id/imgDamage"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@+id/btnDamage"
                    android:src="@drawable/no_image" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlUpdateStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btnUpdateStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_vinslected"
            android:text="@string/update_status"
            android:textAllCaps="false" />
    </RelativeLayout>

</RelativeLayout>
